WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197712
Don't crash when DOMNode.addEventListener:listener:useCapture: is called with a nil listener
https://bugs.webkit.org/show_bug.cgi?id=197712
Summary
Don't crash when DOMNode.addEventListener:listener:useCapture: is called with...
Alex Christensen
Reported
2019-05-08 14:26:35 PDT
Don't crash when DOMNode.addEventListener:listener:useCapture: is called with a nil listener
Attachments
Patch
(3.69 KB, patch)
2019-05-08 14:28 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-05-08 14:28:30 PDT
Created
attachment 369422
[details]
Patch
Alex Christensen
Comment 2
2019-05-08 14:28:32 PDT
<
rdar://problem/50429770
>
Alex Christensen
Comment 3
2019-05-08 17:03:14 PDT
http://trac.webkit.org/r245080
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug