Don't crash when DOMNode.addEventListener:listener:useCapture: is called with a nil listener https://bugs.webkit.org/show_bug.cgi?id=197712 <rdar://problem/50429770>

Reviewed by Tim Horton.

Source/WebKitLegacy/mac:

* DOM/ObjCEventListener.h:
* DOM/ObjCEventListener.mm:
(WebCore::ObjCEventListener::wrap):

Tools:

* TestWebKitAPI/Tests/WebKitLegacy/mac/DeallocWebViewInEventListener.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/211859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245080 268f45cc-cd09-0410-ab3c-d52691b4dbfc